[package]
name = "rsbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false }

[features]
default = ["all"]
all = ["std", "compact-nums"]
alloc = ["serde/alloc"]
std = ["alloc", "serde/std"]
compact-nums = []
test-utils = ["all", "serde/derive"]

[dev-dependencies]
rsbin = { path = ".", features = ["test-utils"] }
